--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,18 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+a {
+  text-decoration: none;
+}
+
+:root {
+  --global-max-width: 1110px;
+  --body-color: #f9f9f9;
+  --header-color: #fff;
+}
+
+body {
+  background-color: var(--body-color);
+  min-height: 1000px;
+}
