--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@ a {
   text-decoration: none;
 }
 
+button {
+  cursor: pointer;
+}
+
 :root {
   --global-max-width: 1110px;
   --body-color: #f9f9f9;
@@ -17,4 +21,5 @@ a {
 body {
   background-color: var(--body-color);
   min-height: 1000px;
+  position: relative;
 }
