--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -1,9 +1,9 @@
 .footer {
   color: white;
-  background-color: #623b2a;
+  background-color: var(--footer-color);
 
   &-top {
-    padding: 20px 140px;
+    padding: 20px 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -206,7 +206,7 @@
   &-middle {
     display: flex;
     justify-content: space-between;
-    padding: 20px 140px;
+    padding: 20px 0;
     border-bottom: solid 1px #4f2f22;
 
     &-about-center {
@@ -305,7 +305,7 @@
   }
 
   &-bottom {
-    padding: 20px 140px;
+    padding: 20px 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
