--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -2,9 +2,9 @@
   width: 100%;
   background-color: var(--header-color);
   box-shadow: 0 2px 10px rgb(243, 243, 243);
+  margin-bottom: 16px;
   &-inner {
     width: 100%;
-    border: solid;
     min-height: 100px;
     display: flex;
     justify-content: space-between;
