--- a/src/components/menu/Menu.scss
+++ b/src/components/menu/Menu.scss
@@ -9,13 +9,18 @@
   left: 0;
   top: 100px;
   height: 0;
-  animation-duration: 0.25s;
+  overflow: hidden;
+  animation-duration: 0.5s;
   animation-timing-function: ease-in;
   animation-fill-mode: forwards;
-  padding: 50px 0;
-  //   height: 0 !important;
+  animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+
   .menu-content {
-    border: solid;
+    animation-name: menu-content;
+    animation-duration: 0.6s;
+    animation-delay: 0.25s;
+    animation-fill-mode: forwards;
+    opacity: 0;
     .menu-content-item {
       > h2 {
         font-size: 53px;
@@ -43,6 +48,7 @@
 
 .menu-open {
   animation-name: menu-open;
+  padding: 50px 0;
 }
 
 .menu-close {
@@ -64,5 +70,15 @@
   }
   100% {
     height: 0;
+  }
+}
+
+@keyframes menu-content {
+  0% {
+    transform: translateX(800px);
+  }
+  100% {
+    transform: translateX(0px);
+    opacity: 1;
   }
 }
