--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.cdnfonts.com/css/circe");
+
 * {
   margin: 0;
   padding: 0;
@@ -16,6 +18,7 @@ button {
   --global-max-width: 1110px;
   --body-color: #f9f9f9;
   --header-color: #fff;
+  --footer-color: #623b2a;
 }
 
 body {
