--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -1,6 +1,7 @@
 .home {
   &-my-business {
     display: flex;
+    border-radius: 5px;
     background-color: #cd9b6a;
 
     &-desc {
@@ -59,6 +60,122 @@
 
         &-txt {
           font-size: 14px;
+        }
+      }
+    }
+  }
+
+  &-services {
+    display: flex;
+    margin-top: 30px;
+    border-radius: 5px;
+    align-items: center;
+    background-color: #cd9b6a;
+
+    &-desc {
+      min-height: 300px;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: flex-end;
+      padding: 40px;
+
+      &-title {
+        opacity: 0.8;
+        color: white;
+        font-size: 38px;
+        font-weight: bold;
+        margin-bottom: 30px;
+      }
+
+      &-txt {
+        opacity: 0.8;
+        color: white;
+        margin-bottom: 10px;
+      }
+
+      &-btn {
+        border: none;
+        outline: none;
+        padding: 9px 30px;
+        border-radius: 30px;
+        background: #ff5435;
+
+        > a {
+          color: #fff;
+          font-size: 18px;
+        }
+      }
+    }
+
+    &-imgs {
+      flex-grow: 1;
+      background-color: blue;
+    }
+  }
+
+  &-digital-platform {
+    margin-top: 30px;
+
+    > a {
+      > img {
+        width: 100%;
+      }
+    }
+  }
+
+  &-success-story {
+    margin-top: 30px;
+
+    > a {
+      > img {
+        width: 100%;
+      }
+    }
+  }
+
+  &-search-site {
+    margin-top: 30px;
+
+    &-form {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      &-input {
+        width: 94%;
+        height: 46px;
+        border: none;
+        outline: none;
+        font-size: 16px;
+        padding: 5px 15px;
+        border-radius: 5px;
+        color: rgba(0, 0, 0, 1);
+        border: 1px solid #623b2a;
+        background-color: #ffffff;
+      }
+
+      &-btn {
+        width: 4%;
+        height: 46px;
+        cursor: pointer;
+        transition: 0.3s;
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: #623b2a;
+        border: 1px solid #623b2a;
+
+        &:hover {
+          background-color: #553324;
+          border: 1px solid #553324;
+        }
+
+        &-icon {
+          color: white;
+          font-size: 24px;
         }
       }
     }
