--- a/src/components/home/faq/Faq.scss
+++ b/src/components/home/faq/Faq.scss
@@ -1,6 +1,7 @@
 .faq {
   font-family: "Circe", sans-serif;
   margin-top: 30px;
+  margin-bottom: 70px;
   > h1 {
     color: var(--footer-color);
     font-size: 48px;
@@ -18,6 +19,8 @@
       border-radius: 5px;
       overflow: hidden;
       height: 68px;
+      animation-duration: 0.5s;
+      animation-fill-mode: forwards;
       &-title {
         display: flex;
         align-items: center;
@@ -38,6 +41,7 @@
       }
       .faq-footer {
         border-top: 1px solid #c39367;
+        display: flex;
         align-items: center;
         gap: 24px;
         padding: 20px 25px;
@@ -60,29 +64,26 @@
 
 .faq-open {
   animation-name: faq-open;
-  animation-duration: 0.5s;
-  animation-fill-mode: forwards;
+  //   animation-duration: 0.5s;
+  //   animation-fill-mode: forwards;
   //   animation-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .faq-close {
   animation-name: faq-close;
-  animation-duration: 0.5s;
-  animation-fill-mode: forwards;
+  //   animation-duration: 0.5s;
+  //   animation-fill-mode: forwards;
 }
 
 @keyframes faq-open {
-  0% {
-    // height: 0;
-  }
   100% {
-    height: 200px;
+    height: 220px;
   }
 }
 
 @keyframes faq-close {
   0% {
-    // display: flex;
+    height: 220px;
   }
   100% {
     height: 68px;
