--- a/src/components/home/modes/Modes.scss
+++ b/src/components/home/modes/Modes.scss
@@ -16,7 +16,7 @@
     > p {
       font-size: 26px;
       color: white;
-      font-family: "Circe", sans-serif;
+      font-family: var(--global-ff);
     }
   }
   .self-employed {
