--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -3,6 +3,8 @@
   background-color: var(--header-color);
   box-shadow: 0 2px 10px rgb(243, 243, 243);
   margin-bottom: 16px;
+  font-family: var(--global-ff);
+
   &-inner {
     width: 100%;
     min-height: 100px;
@@ -20,6 +22,7 @@
         > svg {
           width: 100%;
           height: 100%;
+          color: grey;
         }
       }
       .logo {
