--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
+/* ============== fonts ================ */
+
+@font-face {
+  font-family: Circe;
+  src: url(../src/fonts/fontCirce/Circe-Regular.ttf);
+}
+
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap");
+/* font-family: 'PT Sans', sans-serif; */
+
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
+/* font-family: 'Montserrat', sans-serif; */
+
+/* ===================================== */
+
 * {
   margin: 0;
   padding: 0;
