--- a/src/components/news/News.scss
+++ b/src/components/news/News.scss
@@ -1,12 +1,78 @@
 .news {
-  background-color: green;
+  display: flex;
+  justify-content: space-between;
 
   &-left-side {
-    width: 60%;
-    border: solid;
-
     &-list {
-      border: solid white;
+      list-style-type: none;
+
+      :not(:first-child) {
+        margin-top: 10px;
+      }
+
+      &-item {
+        display: flex;
+        cursor: pointer;
+
+        &-images {
+          width: 45%;
+
+          &-img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
+        }
+
+        &-desc {
+          width: 55%;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          padding-left: 20px;
+
+          &-title {
+            color: #2c2a29;
+            font-size: 18px;
+
+            &:hover {
+              opacity: 0.8;
+              text-decoration: underline;
+            }
+          }
+
+          &-txt {
+            opacity: 0.54;
+            font-size: 14px;
+            color: #2c2a29;
+            margin-bottom: 50px;
+          }
+
+          &-btn {
+            border: none;
+            outline: none;
+            font-size: 16px;
+            color: #c39367;
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            background-color: #f9f9f9;
+
+            &-icon {
+              margin-left: 10px;
+              transition: 250ms;
+            }
+
+            &:hover &-icon {
+              margin-left: 20px;
+            }
+
+            &:hover {
+              opacity: 0.9;
+            }
+          }
+        }
+      }
     }
   }
 }
