--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@ button {
   --header-color: #fff;
   --footer-color: #623b2a;
   --global-ff: "Circe", sans-serif;
+  --text-color: #c39367;
 }
 
 body {
