admin panel news

--- a/src/index.css
+++ b/src/index.css
@@ -43,3 +43,16 @@ body {
   min-height: 1000px;
   position: relative;
 }
+
+.del-btn,
+.edit-btn {
+  background-color: red;
+  padding: 10px 24px;
+  border-radius: 10px;
+  border: none;
+  color: white;
+}
+
+.edit-btn {
+  background-color: blue;
+}
