--- a/src/components/admin/Admin.scss
+++ b/src/components/admin/Admin.scss
@@ -1,24 +1,29 @@
 .admin {
-  border: solid red 8px;
   display: flex;
 
   > aside {
     min-width: 400px;
-    border: solid red;
     min-height: 100vh;
+    box-shadow: 2px 2px 10px grey;
+    background: linear-gradient(var(--text-color), white);
+    padding: 10px;
     .field {
       box-shadow: 2px 2px 10px grey;
       padding: 20px;
       cursor: pointer;
       border-radius: 10px;
-      font-size: 40px;
+      font-size: 30px;
       font-family: var(--global-ff);
+      background-color: antiquewhite;
+      margin-bottom: 14px;
+    }
+    .active {
+      border: solid 2px black;
     }
   }
   &-content {
+    flex-grow: 1;
     padding: 24px;
-    > table {
-      font-family: var(--global-ff);
-    }
+    background-color: antiquewhite;
   }
 }
