--- a/src/components/common/page-banner/PageBanner.scss
+++ b/src/components/common/page-banner/PageBanner.scss
@@ -1,6 +1,7 @@
 .page-banner {
   height: 180px;
   border-radius: 10px;
+  background-color: white;
   background-image: url(../../../assets/images/banner.svg);
   background-size: contain;
   background-position: right;
@@ -10,10 +11,12 @@
   align-items: center;
   font-family: var(--global-ff);
   margin-bottom: 24px;
+
   &-content {
     > span,
     a {
-      font-size: 14px;
+      font-size: 10px;
+      letter-spacing: 0.5px;
       color: var(--text-color);
     }
 
