--- a/src/components/services/Services.scss
+++ b/src/components/services/Services.scss
@@ -2,7 +2,7 @@
   display: flex;
   margin-bottom: 30px;
   &-list {
-    width: 32%;
+    width: 348px;
     margin-right: 24px;
     display: flex;
     flex-direction: column;
@@ -34,6 +34,6 @@
     }
   }
   &-component {
-    flex-grow: 1;
+    flex: 1;
   }
 }
