--- a/src/components/services/property-support/PropertySupport.scss
+++ b/src/components/services/property-support/PropertySupport.scss
@@ -1,4 +1,5 @@
 .property-support {
+  font-family: var(--global-ff);
   ul {
     margin-bottom: 44px;
   }
@@ -13,7 +14,27 @@
   .conference-name {
     text-align: center;
     font-size: 12px;
-    background-color: grey;
+    color: grey;
     margin-bottom: 44px;
+  }
+  .halls {
+    display: flex;
+    justify-content: space-between;
+    .halls-item {
+      width: 220px;
+      position: relative;
+      > img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+      > span {
+        position: absolute;
+        bottom: 12px;
+        left: 60px;
+        color: white;
+        text-shadow: 0px 0px 10px black;
+      }
+    }
   }
 }
