--- a/src/components/home/home-news-section/HomeNewsSection.scss
+++ b/src/components/home/home-news-section/HomeNewsSection.scss
@@ -1,5 +1,4 @@
 .home-news-section {
-  width: var(--global-max-width);
   height: auto;
   // border: 1px solid red;
   padding: 30px 0px 70px;
@@ -61,6 +60,12 @@
         width: 100%;
         height: 230px;
         transition: 0.5s;
+
+        > img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
       }
 
       &-dateCategoryBox {
@@ -121,6 +126,26 @@
       &:hover .arrow {
         left: 15px;
       }
+    }
+  }
+
+  > form > button {
+    display: none;
+    padding: 8px 30px;
+    border: solid 2px #daac82;
+    border-radius: 4px;
+    cursor: pointer;
+    outline: none;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 16px;
+    line-height: 25px;
+    color: #c39367;
+    transition: 0.1s;
+    font-weight: 400;
+    text-align: center;
+
+    &:hover {
+      background-color: #c3946725;
     }
   }
 }
