--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -64,6 +64,10 @@
         cursor: pointer;
         transition: 0.1s;
       }
+
+      &-search-icon {
+        display: none;
+      }
     }
   }
 }
