--- a/src/components/home/home-partners-section/HomePartnersSection.scss
+++ b/src/components/home/home-partners-section/HomePartnersSection.scss
@@ -1,6 +1,6 @@
 .home-partners-section {
-  width: var(--global-max-width);
-  height: 180px;
+  // width: var(--global-max-width);
+  min-height: 180px;
   // border: 1px solid red;
   background: #fff;
   padding: 40px 0 40px;
