--- a/src/components/home/home-question-section/HomeQuestionSection.scss
+++ b/src/components/home/home-question-section/HomeQuestionSection.scss
@@ -1,5 +1,5 @@
 .home-question-section {
-  width: var(--global-max-width);
+  // width: var(--global-max-width);
   height: auto;
   border: 1px solid red;
   margin: auto;
@@ -25,12 +25,12 @@
   }
 
   &-form {
-    width: 600px;
+    width: 100%;
     display: flex;
     flex-direction: column;
 
     &-input {
-      width: 400px;
+      width: 40%;
       height: 50px;
       background: #ffffff;
       border: none;
