--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -12,6 +12,18 @@
       display: flex;
       align-items: center;
       cursor: pointer;
+
+      &:hover > &-icons {
+        animation-name: rotate_icon;
+        animation-duration: 0.2s;
+        animation-iteration-count: 1;
+        animation-timing-function: linear;
+      }
+
+      &:hover > &-icons > &-icon {
+        font-size: 18px;
+      }
+
       &-icons {
         width: 50px;
         height: 50px;
@@ -28,42 +40,31 @@
           font-size: 24px;
           color: #cd9b6a;
         }
-
-        &:hover {
-          animation-name: rotate_icon;
-          animation-duration: 0.2s;
-          animation-iteration-count: 1;
-          animation-timing-function: linear;
-        }
-
-        &:hover &-icon {
-          font-size: 18px;
-        }
-
-        @keyframes rotate_icon {
-          0% {
-            border: solid 1px #cd9b6a;
-            border-left: solid 1px #f9f9f9;
-          }
-          50% {
-            border: solid 1px #cd9b6a;
-            border-top: solid 1px #f9f9f9;
-          }
-          80% {
-            border: solid 1px #cd9b6a;
-            border-right: solid 1px #f9f9f9;
-          }
-          100% {
-            border: solid 1px #cd9b6a;
-            border-bottom: solid 1px #f9f9f9;
-          }
-        }
       }
 
       > p {
         color: black;
         font-size: 19px;
         margin-left: 10px;
+      }
+
+      @keyframes rotate_icon {
+        0% {
+          border: solid 1px #cd9b6a;
+          border-left: solid 1px #f9f9f9;
+        }
+        50% {
+          border: solid 1px #cd9b6a;
+          border-top: solid 1px #f9f9f9;
+        }
+        80% {
+          border: solid 1px #cd9b6a;
+          border-right: solid 1px #f9f9f9;
+        }
+        100% {
+          border: solid 1px #cd9b6a;
+          border-bottom: solid 1px #f9f9f9;
+        }
       }
     }
   }
