--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -4,6 +4,7 @@
   box-shadow: 0 2px 10px rgb(243, 243, 243);
   margin-bottom: 16px;
   font-family: var(--global-ff);
+  // position: relative
 
   &-inner {
     width: 100%;
@@ -67,6 +68,35 @@
 
       &-search-icon {
         display: none;
+      }
+
+      &-close-icon {
+        font-size: 28px;
+      }
+
+      &-header-search {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        z-index: 999;
+        min-height: 90px;
+        left: 0;
+        bottom: -130px;
+        background-color: rgb(0, 0, 0, 0.5);
+
+        > div {
+          min-height: 110px;
+          display: flex;
+          align-items: center;
+          padding: 0 20px;
+          background: linear-gradient(
+              217deg,
+              #cd9b6a,
+              rgba(205, 153, 106, 0) 70.71%
+            ),
+            linear-gradient(127deg, #cd9b6a, rgba(205, 155, 106, 0.22) 70.71%),
+            linear-gradient(336deg, #e74b36, rgba(231, 75, 54, 0.75) 70.71%);
+        }
       }
     }
   }
