self-employed-mode

--- a/src/components/home/home-digital-section/HomeDigitalSection.scss
+++ b/src/components/home/home-digital-section/HomeDigitalSection.scss
@@ -1,5 +1,5 @@
 .home-digital-section {
-  width: var(--global-max-width);
+  // width: var(--global-max-width);
   height: 408px;
   // border: 1px solid red;
   margin: auto;
