--- a/src/components/home/home-events-section/HomeEventsSection.scss
+++ b/src/components/home/home-events-section/HomeEventsSection.scss
@@ -1,5 +1,5 @@
 .home-events-section {
-  width: var(--global-max-width);
+  // width: var(--global-max-width);
   height: auto;
   // border: 1px solid red;
   margin: auto;
