--- a/src/components/home/home-partners-section/HomePartnersSection.scss
+++ b/src/components/home/home-partners-section/HomePartnersSection.scss
@@ -1,5 +1,5 @@
 .home-partners-section {
-  width: var(--global-max-width);
+  width: 100%;
   height: 180px;
   // border: 1px solid red;
   background: #fff;
