--- a/src/components/home/home-news-section/HomeNewsSection.scss
+++ b/src/components/home/home-news-section/HomeNewsSection.scss
@@ -1,5 +1,5 @@
 .home-news-section {
-  width: var(--global-max-width);
+  // width: var(--global-max-width);
   height: auto;
   // border: 1px solid red;
   padding: 30px 0px 70px;
