--- a/src/components/home/home-question-section/HomeQuestionSection.scss
+++ b/src/components/home/home-question-section/HomeQuestionSection.scss
@@ -1,5 +1,5 @@
 .home-question-section {
-  width: var(--global-max-width);
+  // width: var(--global-max-width);
   height: auto;
   border: 1px solid red;
   margin: auto;
