--- a/src/components/home/home-services-section/HomeServicesSection.scss
+++ b/src/components/home/home-services-section/HomeServicesSection.scss
@@ -1,5 +1,5 @@
 .home-services-section {
-  width: var(--global-max-width);
+  // width: var(--global-max-width);
   height: auto;
   // border: 1px solid red;
   margin: auto;
