--- a/src/styles/media.scss
+++ b/src/styles/media.scss
@@ -352,6 +352,9 @@
       }
     }
   }
+  .services-component {
+    width: 100%;
+  }
 
   .services-list {
     display: none !important;
@@ -511,6 +514,15 @@
             margin-top: 10px;
           }
         }
+      }
+    }
+  }
+  .page-banner {
+    height: auto !important;
+    background-size: cover !important;
+    .page-banner-content {
+      > h1 {
+        font-size: 24px;
       }
     }
   }
